<resources>
    <string name="app_name">Shoe Inventory</string>

    <string name="loginFragmentLabel">Login</string>
    <string name="welcomeFragmentLabel">Welcome\!</string>
    <string name="instructionsFragmentLabel">Instructions</string>
    <string name="listingFragmentLabel">Listing</string>
    <string name="detailsFragmentLabel">Details</string>

    <string name="stringEmailLabel">Email</string>
    <string name="stringPasswordLabel">Password</string>

    <string name="stringCreateButton">Create</string>
    <string name="stringLoginButton">Login</string>
    <string name="stringNextButton">Next</string>
    <string name="stringAddButton">Add</string>
    <string name="stringCancelButton">Cancel</string>
    <string name="stringSaveButton">Save</string>

    <string name="stringWelcomeBody">Welcome to the Shoe Inventory Tracker Application! \nIn this app, the following is used:  \n1- Data Binding \n2- Navigation \n3- Single Activity Architecture \n4- ViewModel \n5- LiveData</string>
    <string name="stringInstructionsBody">To use this app, simply click on the Floating Action Button. \nThis will allow you to add a new shoe into the inventory. \nYou can also click on single shoe and be able to view it\'s details!</string>
    <string name="stringShoeImageDescription">Image of a Shoe</string>
    <string name="stringLogOut">Log Out</string>

    <string name="stringShoeName">Name</string>
    <string name="stringShoeBrand">Brand</string>
    <string name="stringShoeSize">Size</string>
    <string name="stringShoeDescription">Description</string>
</resources>