<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.shoeinventory.LoginFragment"
        android:label="@string/loginFragmentLabel"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.example.shoeinventory.WelcomeFragment"
        android:label="@string/welcomeFragmentLabel"
        tools:layout="@layout/fragment_welcome">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.example.shoeinventory.InstructionsFragment"
        android:label="@string/instructionsFragmentLabel"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_listingFragment"
            app:destination="@id/listingFragment" />
    </fragment>
    <fragment
        android:id="@+id/listingFragment"
        android:name="com.example.shoeinventory.ListingFragment"
        android:label="@string/listingFragmentLabel"
        tools:layout="@layout/fragment_listing">
        <action
            android:id="@+id/action_listingFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_listingFragment_to_detailsFragment"
            app:destination="@id/detailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailsFragment"
        android:name="com.example.shoeinventory.DetailsFragment"
        android:label="@string/detailsFragmentLabel"
        tools:layout="@layout/fragment_details" />
</navigation>