<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        style="@style/styleTitle"

        android:id="@+id/loginFragmentTitle"
        android:text="@string/loginFragmentLabel"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/styleWrappedContent"

        android:labelFor="@+id/emailEditText"
        android:text="@string/stringEmailLabel"

        app:layout_constraintBottom_toTopOf="@id/emailEditText"
        app:layout_constraintEnd_toEndOf="@id/emailEditText"
        app:layout_constraintStart_toStartOf="@id/emailEditText" />

    <EditText
        style="@style/styleEditTextViews"
        android:id="@+id/emailEditText"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"

        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        style="@style/styleWrappedContent"

        android:labelFor="@id/passwordEditText"
        android:text="@string/stringPasswordLabel"

        app:layout_constraintBottom_toTopOf="@id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@id/passwordEditText"
        app:layout_constraintStart_toStartOf="@id/passwordEditText" />

    <EditText
        style="@style/styleEditTextViews"
        android:id="@+id/passwordEditText"
        android:importantForAutofill="no"
        android:inputType="textPassword"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailEditText" />

    <Button
        style="@style/styleButtons"
        android:id="@+id/loginButton"
        android:text="@string/stringLoginButton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/createButton" />

    <Button
        style="@style/styleButtons"
        android:id="@+id/createButton"
        android:text="@string/stringCreateButton"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>